--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mudi?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jackson.serialization.fail-on-empty-beans=false
